src/component/command_palette/snapshots/envision__component__command_palette__snapshot_tests__snapshot_hidden.snap
---
source: src/component/command_palette/snapshot_tests.rs
expression: terminal.backend().to_string()
---

