src/component/command_palette/snapshots/envision__component__command_palette__snapshot_tests__snapshot_no_matches.snap
---
source: src/component/command_palette/snapshot_tests.rs
expression: terminal.backend().to_string()
---
                                                            
                                                            
                                                            
            ┌ Command Palette ─────────────────┐            
            │> xyzxyz                          │            
            ────────────────────────────────────            
            │  No matches                      │            
            └──────────────────────────────────┘
