src/component/command_palette/snapshots/envision__component__command_palette__snapshot_tests__snapshot_with_query.snap
---
source: src/component/command_palette/snapshot_tests.rs
expression: terminal.backend().to_string()
---
                                                            
                                                            
            ┌ Command Palette ─────────────────┐            
            │> o                               │            
            ────────────────────────────────────            
            │▸ Open Settings                   │            
            │  Open File                 Ctrl+O│            
            │  Close Tab                 Ctrl+W│            
            │  Quit Application          Ctrl+Q│            
            │                                  │            
            └──────────────────────────────────┘
